dhall/tests/type-inference/failure/unit/FunctionApplicationIsNotFunction.txt
Type error: error: expected function, found `Bool`
 --> <current file>:1:1
  |
1 | True True
  | ^^^^ function application requires a function
  |
